--- a/src/CSS/gallery.css
+++ b/src/CSS/gallery.css
@@ -1,12 +1,4 @@
-#grid {
-  width: calc(100vw - 10px);
-  display: grid;
-  column-fill: auto;
-}
-section#grid {
-  margin: 0px auto;
-  margin-top: 200px;
-}
+
 .title {
   font-weight: 500;
   font-family: "Source Sans Pro", sans-serif;
@@ -16,18 +8,52 @@ section#grid {
   overflow: hidden;
   margin-top: 0;
 }
+.grid-content.wrapper{
+  max-width: 800px;
+  max-width: 90vw;
+  margin: 0px auto;
+  margin-top: 200px;
 
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+
+}
 .gridItem img {
   width: auto;
   height: auto;
   max-height: 200px;
+  box-shadow: 0 0 4px rgba(0,0,0,0.3);
 }
 .gridItem {
   margin-bottom: -15px;
-  margin: -3px 5px;
-  display: inline-flex;
-  flex-direction: column;
+  margin: 5px;
+  display: flex;
+  position: relative;
 }
 .gridItem .title{
   display:none;
+  flex-wrap: warp;
+  padding: 10px;
+  text-align:left;
+  align-items: center;
 }
+.shadowTitle{
+  position: absolute;
+  background: linear-gradient(rgba(0,0,0,0.4),rgba(10,10,10,0.3),rgba(10,10,10,0.0));
+  width:100%;
+  height: 40px;
+  opacity: 0;
+  align-self: flex-start;
+}
+.gridItem:hover .title{
+  display: block;
+  color: white;
+  top: 12px;
+}
+
+.gridItem:hover .shadowTitle{
+  opacity:1;
+  transition: 50ms all ease-in;
+}
+
