--- a/src/CSS/header.css
+++ b/src/CSS/header.css
@@ -17,10 +17,12 @@
   top: 110px;
   left: calc(50% - 142px);
   transform: scale(1.8);
-  transition: 400ms ease-in-out all;
 }
 #magnify.scrolled{
-  top:40px;
+  top:28px;
+  left: calc(50vw - 80px);
+  transform: scale(1.3);
+  transition: 300ms ease-in-out all;
 }
 .textRegion {
   border: none;
@@ -39,9 +41,11 @@
 
   margin-top: 70px;
   outline: 0;
-  transition: 400ms all ease-in-out;
 }
 
 .textRegion.scrolled{
   margin-top: 0px;
+  font-size: 1em;
+  height: 24px;
+  transition: 300ms all ease-in-out;
 }
